# git-undigest

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_streaming.py
src/git_undigest/: __init__.py  checksum.py  cli.py  exceptions.py  models.py  parser.py  utils.py  validator.py  writer.py
src/git_undigest/formats/: __init__.py  gitingest.py
tests/: conftest.py  test_api.py  test_cli.py  test_formats_and_placeholders.py  test_fuzz.py  test_parser.py  test_phase1.py  test_validator.py  test_writer.py
