[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-undigest"
version = "0.2.0"
description = "Reconstruct a full repository from a GitIngest-style digest file."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Vedant Parmane", email = "16848858+anomalyco@users.noreply.github.com" },
]
maintainers = [
    { name = "git-undigest contributors" },
]
keywords = [
    "gitingest",
    "digest",
    "repository",
    "reconstruct",
    "llm",
    "cli",
    "code",
    "development",
    "gitingest-reverse",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
zstd = ["zstandard>=0.22"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.8",
    "build>=1.0",
    "twine>=4.0",
]

[project.entry-points."git_undigest.formats"]
gitingest = "git_undigest.formats.gitingest:GitIngestFormat"

[project.urls]
Homepage = "https://github.com/vnparmane/git-undigest"
Repository = "https://github.com/vnparmane/git-undigest"
Issues = "https://github.com/vnparmane/git-undigest/issues"
Documentation = "https://github.com/vnparmane/git-undigest#readme"
Changelog = "https://github.com/vnparmane/git-undigest/blob/main/CHANGELOG.md"

[project.scripts]
git-undigest = "git_undigest.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/git_undigest"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/benchmarks"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = ["error"]

[tool.mypy]
python_version = "3.10"
strict = true
